--- a/wp-content/themes/hello-theme-child-master/css/style.css
+++ b/wp-content/themes/hello-theme-child-master/css/style.css
@@ -100,6 +100,10 @@ body .fw-800 {
   color: var(--e-global-color-secondary);
 }
 
+p {
+  font-size: var(--wp--preset--font-size--medium, 20px);
+}
+
 body a {
   color: var(--e-global-color-text);
 }
