--- a/wp-content/themes/hello-theme-child-master/css/style.css
+++ b/wp-content/themes/hello-theme-child-master/css/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 body .font-12 {
   font-size: 0.75em;
 }
@@ -66,6 +70,10 @@ body .fw-800 {
   font-weight: 800;
 }
 
+body h1, body h2, body h3 {
+  letter-spacing: -1.5px;
+}
+
 .list-inline {
   padding-left: 0;
   list-style: none;
@@ -102,6 +110,12 @@ body .fw-800 {
 
 p {
   font-size: var(--wp--preset--font-size--medium, 20px);
+}
+
+body p,
+body.page p,
+body.elementor-default p {
+  line-height: 1.5;
 }
 
 body a {
@@ -142,6 +156,22 @@ body a {
 
 .mb-3 {
   margin-bottom: 1.875em;
+}
+
+.py-0,
+.py-0 > .e-con-inner {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.pt-0,
+.pt-0 > .e-con-inner {
+  padding-top: 0 !important;
+}
+
+.pb-0,
+.pb-0 > .e-con-inner {
+  padding-bottom: 0 !important;
 }
 
 .marquee {
