--- a/wp-content/themes/hello-theme-child-master/css/style.css
+++ b/wp-content/themes/hello-theme-child-master/css/style.css
@@ -109,7 +109,7 @@ body h1, body h2, body h3 {
 }
 
 p {
-  font-size: var(--wp--preset--font-size--medium, 20px);
+  font-size: clamp(1rem, 4vw, var(--wp--preset--font-size--medium, 1.25rem));
 }
 
 body p,
@@ -187,6 +187,10 @@ html body,
 .cn-button {
   background-color: var(--e-global-color-secondary) !important;
   color: var(--e-global-color-text) !important;
+}
+
+body .elementor-widget-custom_button.Hide {
+  display: none !important;
 }
 
 /* Apply 200px side padding only on desktops/laptops (1025px+) */
